# cpp_exercises

./: CMakeLists.txt  loop.cpp  main.cpp  pi.cpp
include/: Airplane.hh  Initializer.hh  Vector.hh
src/: Airplane.cc  Initializer.cc  Vector.cc
